--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
 streamlit
 pandas
-seaborn
-matplotlib
-shap
-plotly
-altair
-together==1.3.10
-e2b-code-interpreter==1.0.3
-e2b==1.0.5
-Pillow==10.4.0
-scikit-learn
 numpy
-pdfkit
+matplotlib
+seaborn
+scikit-learn
+shap
+lime
+joblib
 python-dotenv
+together
+Pillow
+e2b-code-interpreter
